--- a/opencood/hypes_yaml/V2X-R/4DRadar/V2XR_adafusion.yaml
+++ b/opencood/hypes_yaml/V2X-R/4DRadar/V2XR_adafusion.yaml
@@ -16,7 +16,8 @@ train_params:
 
 fusion:
   core_method: 'IntermediateFusionDatasetV2XR' # LateFusionDataset, EarlyFusionDataset, IntermediateFusionDataset supported
-  args: []
+  args:
+    proj_first: true
 
 # preprocess-related
 preprocess:
