--- a/opencood/hypes_yaml/V2X-R/L_4DR_Fusion/V2XR_Cobevt.yaml
+++ b/opencood/hypes_yaml/V2X-R/L_4DR_Fusion/V2XR_Cobevt.yaml
@@ -26,8 +26,8 @@ train_params:
 
 fusion:
   core_method: 'IntermediateFusionDatasetV2XR'
-  args: []
-
+  args:
+    proj_first: true
 # preprocess-related
 preprocess:
   # options: BasePreprocessor, VoxelPreprocessor, BevPreprocessor
