--- a/opencood/hypes_yaml/V2X-R/L_4DR_Fusion/V2XR_where2comm.yaml
+++ b/opencood/hypes_yaml/V2X-R/L_4DR_Fusion/V2XR_where2comm.yaml
@@ -28,7 +28,8 @@ train_params:
 
 fusion:
   core_method: 'IntermediateFusionDatasetV2XR'  # LateFusionDataset, EarlyFusionDataset, IntermediateFusionDataset supported
-  args: [ ]
+  args:
+    proj_first: true
 
 # Preprocess-related
 preprocess:
